--- a/src/popup/pages/node/FolderChild.module.css
+++ b/src/popup/pages/node/FolderChild.module.css
@@ -7,6 +7,14 @@
   border: var(--border-size-1) solid var(--surface-4);
   border-radius: var(--radius-2);
 
+  @media (prefers-reduced-motion: no-preference) {
+    transition: outline-offset 50ms var(--ease-2);
+  }
+
+  &:focus-visible {
+    outline-offset: -1px;
+  }
+
   &:hover {
     background-color: var(--surface-2);
   }
